<resources>
    <string name="app_name">Splash</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet">You don\'t seem to have active internet connection</string>
    <string name="title_activity_feeds">Feeds</string>
    <string name="title_home">Home</string>
    <string name="title_likes">Likes</string>
    <string name="title_settings">Settings</string>
    <string name="frag_title_1">New</string>
    <string name="frag_title_2">Trending</string>
    <string name="frag_title_3">Featured</string>
    <string name="error_connecting">oops!! error connecting the server</string>
    <string name="login">Login</string>
    <string name="username_error">username cannot be empty</string>
    <string name="password_error">password cannot be empty</string>
    <string name="welcome_back">Welcome back.</string>
    <string name="welcome_back_subtitle">To view your liked photos here please login.</string>
    <string name="zero_likes">You haven\'t liked any post yet</string>
    <string name="unable_to_login">oops!! unable to log you in</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="downloads">Downloads</string>
    <string name="logged_in_as">Logged in as %s</string>
    <string name="unsplash_intro_text">Beautiful, free photos.\nGifted by the world\'s most generous\ncommunity of photographers</string>
    <string name="libraries">Libraries</string>
    <string name="unsplash_powered">Powered by Unsplash.com</string>
    <string name="photo_detail">Photo Detail</string>
    <string name="photo_detail_like">Like</string>
    <string name="photo_detail_download">Download</string>
    <string name="photo_detail_share">Share</string>
    <string name="By">By %s</string>
    <string name="published_on">Published on %s</string>
    <string name="Collections">Collections</string>
    <string name="Photos">Photos</string>
    <string name="Version">version:</string>
    <string name="unknown">unknown</string>
    <string name="like_error">Sorry, you need to login in order to like the photo</string>
    <string name="like_error_1">Sorry, unable to like the photo make sure you have active internet connection</string>
    <string name="like_photo_success">Awesome, glad you liked the photo</string>
    <string name="share_photo">Share image using</string>
    <string name="error_downloading">Sorry, error downloading make sure you have an internet connection.</string>
    <string name="success_downloading">Awesome, your file is located here %s</string>
    <string name="error_permission">Splash requires write storage permission to save the image.</string>
    <string name="downloaded_imgs">Downloaded images</string>
    <string name="downloading">Will start downloading the image</string>

    <!--Used for cache name-->
    <string name="local_cache">Local Cache</string>
    <string name="is_user_logged_in">is_user_logged_in</string>
    <string name="is_response_cache_avail">is_response_cache_avail</string>
    <string name="auth_code">auth_code</string>
    <string name="user_name">user_name</string>

    <!--Shared photo transition-->
    <string name="shared_photo_transition">shared photo transition</string>

    <string name="photo_detail_error">Sorry! unable to get the photo details</string>
    <string name="try_again">Try again</string>
</resources>
