<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary_light">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextAppearance="?android:textAppearanceMedium"
            app:titleTextColor="@color/tab_selected_color"
            app:title="@string/title_settings"
            android:background="@color/icons"
            android:paddingLeft="@dimen/tab_home_padding_left"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/tab_selected_color"
            android:elevation="@dimen/login_button_elevation"
            android:layout_margin="@dimen/fab_margin">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="@dimen/fab_margin">
            <ImageView
                    android:id="@+id/profileimage"
                    android:layout_width="@dimen/settings_icon_size"
                    android:layout_height="@dimen/settings_icon_size"
                    tools:srcCompat="@drawable/ic_launcher_background"/>

            <TextView
                    android:id="@+id/username"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/logged_in_as"
                    android:gravity="left|center"
                    android:textColor="@color/icons"
                    android:layout_marginLeft="@dimen/settings_margin_left"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/icons"/>
        <LinearLayout
                android:id="@+id/downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="@dimen/fab_margin">
            <ImageView
                    android:layout_width="@dimen/settings_icon_size"
                    android:layout_height="@dimen/settings_icon_size"
                    app:srcCompat="@drawable/downloads"/>

            <TextView
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/downloads"
                    android:gravity="left|center"
                    android:textColor="@color/icons"
                    android:layout_marginLeft="@dimen/settings_margin_left"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/icons"/>
        <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="@dimen/fab_margin">
            <ImageView
                    android:layout_width="@dimen/settings_icon_size"
                    android:layout_height="@dimen/settings_icon_size"
                    app:srcCompat="@drawable/about"/>

            <TextView
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/about"
                    android:gravity="left|center"
                    android:textColor="@color/icons"
                    android:layout_marginLeft="@dimen/settings_margin_left"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/icons"/>
        <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="@dimen/fab_margin">
            <ImageView
                    android:layout_width="@dimen/settings_icon_size"
                    android:layout_height="@dimen/settings_icon_size"
                    app:srcCompat="@drawable/logout"/>

            <TextView
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/logout"
                    android:gravity="left|center"
                    android:textColor="@color/icons"
                    android:layout_marginLeft="@dimen/settings_margin_left"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>