<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/tab_selected_color"
        android:orientation="vertical">
    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/tab_selected_color"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                    app:title="@string/photo_detail">
                <ImageView
                        android:id="@+id/feed_detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/photo_detail_image_height"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@drawable/cold_start_img"
                        app:layout_collapseMode="pin"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>
    <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/photo_detail_username"
            android:textColor="@color/icons"
            tools:text="By Jake Wharton"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/photo_detail_margin_top"/>
    <TextView
            android:id="@+id/createdTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            tools:text="On 12-12-2017"
            android:textStyle="bold"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:weightSum="2">
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">
            <ImageButton
                    android:id="@+id/like"
                    android:layout_width="@dimen/photo_detail_icon_size"
                    android:layout_height="@dimen/photo_detail_icon_size"
                    android:background="@drawable/heart"
                    style="?borderlessButtonStyle"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_detail_like"
                    android:textColor="@color/icons"/>
        </LinearLayout>
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                >
            <ImageButton
                    android:id="@+id/download"
                    android:layout_width="@dimen/photo_detail_icon_size"
                    android:layout_height="@dimen/photo_detail_icon_size"
                    android:background="@drawable/downloads"
                    style="?borderlessButtonStyle"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_detail_download"
                    android:textColor="@color/icons"/>
        </LinearLayout>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3"
            android:layout_gravity="center">
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <ImageView
                    android:layout_height="@dimen/progress_bar_size"
                    android:layout_width="@dimen/progress_bar_size"
                    app:srcCompat="@drawable/collections"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Collections"/>
            <TextView
                    android:id="@+id/nocollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1000"/>
        </LinearLayout>
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <ImageView
                    android:layout_height="@dimen/progress_bar_size"
                    android:layout_width="@dimen/progress_bar_size"
                    app:srcCompat="@drawable/cold_image"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Photos"/>
            <TextView
                    android:id="@+id/nophotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1000"/>
        </LinearLayout>
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:srcCompat="@drawable/heart"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_likes"/>
            <TextView
                    android:id="@+id/nolikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1000"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>